@@ -1,3 +1,9 @@
+ -- 2007-07-06 Marco Costantini <costanti@science.unitn.it>
+
+Fixed typo: Cuecard -> CueCat (see bug "[#11306] typo in docs")
+
+
+
 alexandria (0.6.2) unstable; urgency=low
 
   * Initial release. (Closes: #XXXXXX)
